<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageAth"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop = "80dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/name_ath"
        android:src="@drawable/aungthiha"
        app:shapeAppearanceOverlay="@style/image" />

        <LinearLayout
            android:id="@+id/rollLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="90dp"
            android:layout_below="@+id/imageAth"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rollTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/student_Roll"
                android:textColor="@color/indigo_900"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/student_roll"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="90dp"
            android:layout_below="@+id/rollLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/student_Name"
                android:textColor="@color/indigo_900"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/student_name"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/genderLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="90dp"
            android:layout_below="@+id/nameLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genderTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/student_Gender"
                android:textColor="@color/indigo_900"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/student_gender"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="90dp"
            android:layout_below="@+id/genderLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/student_Email"
                android:textColor="@color/indigo_900"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/student_email"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobileLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="90dp"
            android:layout_below="@+id/emailLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mobileTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/student_Mobile"
                android:textColor="@color/indigo_900"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/student_mobile"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weightLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="90dp"
            android:layout_below="@+id/mobileLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/student_Weight"
                android:textColor="@color/indigo_900"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/student_weight"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/heightLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="90dp"
            android:layout_below="@+id/weightLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/student_Height"
                android:textColor="@color/indigo_900"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/student_height"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

</RelativeLayout>