<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/studentImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/aungthiha"
            android:layout_marginEnd="10dp"
            app:shapeAppearanceOverlay="@style/imageAth"
            android:contentDescription="@string/name_ath"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_naming"
                android:textColor="@color/deepOrange_A400"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/rollId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roll_number"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/nameOfStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/deepOrange_A400"
                android:layout_marginTop="20dp"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/rollOfStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>